continue fix contrast issues

--- a/src/components/PrivacyPolicy/PrivacyPolicy.module.css
+++ b/src/components/PrivacyPolicy/PrivacyPolicy.module.css
@@ -2,11 +2,13 @@
   font-size: 3em;
   font-weight: bold;
   margin-bottom: 1.6rem;
+  color: var(--contrast-red);
 }
 
 .subTitle {
   font-weight: bold;
   font-size: 2.2rem;
+  color: var(--contrast-red);
 }
 
 .paragraph {
